<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="7"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/showcase"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:layout_centerInParent="true"
            android:padding="@dimen/large_spacer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/manrope"
                android:layout_marginBottom="@dimen/extra_large_spacer"
                android:textSize="@dimen/subheading_size"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_result_label" />
            <ImageView
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:id="@+id/qrcode_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <LinearLayout
            android:layout_marginVertical="@dimen/small_spacer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/button_container"
                android:padding="@dimen/small_spacer"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    app:icon="@drawable/ic_youtube_searched_for_black_24dp"
                    android:layout_marginLeft="@dimen/medium_spacer"
                    android:layout_marginRight="@dimen/medium_spacer"
                    android:id="@+id/rescan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.Button"
                    android:layout_gravity="center"
                    android:text="@string/rescan_label"
                    android:backgroundTint="@color/danger"
                    android:layout_weight="1" />
                <com.google.android.material.button.MaterialButton
                    android:theme="@style/AppTheme.Button"
                    android:layout_marginLeft="@dimen/medium_spacer"
                    android:layout_marginRight="@dimen/medium_spacer"
                    app:icon="@drawable/ic_check_black_24dp"
                    android:id="@+id/qr_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/success"
                    android:text="@string/confirm_label"
                    android:layout_weight="1" />
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                app:rippleColor="@color/colorPrimaryTransparent"
                android:id="@+id/scan_back_btn"
                android:padding="@dimen/small_spacer"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                app:icon="@drawable/ic_arrow_back_black_24dp"
                app:iconTint="@color/colorPrimary"
                android:text="@string/back_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>